--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html lang="tr">
 <head>
 <meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no" />
-<title>Viteska – Mağaza</title>
+<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no" />
+<title>Viteska — Mağaza</title>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"/>
 
 <style>
   :root{
     --primary:#f27405; --primary-ink:#8a3c00;
     --text:#1a1209; --muted:#6b7280; --ink:#111;
-    --ok:#18b118; --danger:#e11d48;
+    --ok:#16a34a; --danger:#e11d48;
     --line:#ffe2c2; --soft:#fff7ef; --bg:#fff;
     --blue:#0ea5e9; --blue-ink:#075985; --blue-bg:#eaf7ff;
     --radius:16px; --safe:env(safe-area-inset-bottom,0px);
@@ -65,11 +65,11 @@
   .cart-fab{position:fixed; right:12px; bottom:12px; z-index:30; height:56px; border-radius:16px; padding:0 14px; display:flex; align-items:center; gap:10px; background:#111; color:#fff; font-weight:900; border:none; box-shadow:var(--shadow)}
   .badge{background:#ff4d4f; color:#fff; font-size:12px; font-weight:900; line-height:1; padding:6px 8px; border-radius:999px}
 
-  /* common modal */
+  /* common modal (full-height sheets, mobile-first) */
   .modal-bg{display:none; position:fixed; inset:0; background:rgba(0,0,0,.24); z-index:60; align-items:center; justify-content:center}
   .modal-bg.active{display:flex}
   .sheet{width:100vw; max-width:860px; height:100vh; background:#fff; display:flex; flex-direction:column; overflow:hidden; border-radius:0}
-  .h{display:flex; align-items:center; justify-content:space-between; padding:12px 14px; border-bottom:1px solid #eee}
+  .h{display:flex; align-items:center; justify-content:space-between; gap:10px; padding:12px 14px; border-bottom:1px solid #eee}
   .h .t{font-weight:900; color:var(--primary-ink); display:flex; align-items:center; gap:8px}
   .c{flex:1; overflow:auto; padding:14px}
   .f{position:sticky; bottom:0; background:#fff; padding:12px 14px calc(12px + var(--safe)); border-top:1px solid #eee; display:grid; grid-template-columns:1fr 1fr; gap:10px}
@@ -605,7 +605,8 @@ function init(){
   $("#cat").addEventListener('change', renderList);
   $("#openCart").addEventListener('click', openCart);
   $("#btnOrders").addEventListener('click', ()=>openOrders());
-  document.getElementById('ordSearch').addEventListener('input', ()=>renderOrders());
+  const sEl=document.getElementById('ordSearch');
+  if(sEl) sEl.addEventListener('input', ()=>renderOrders());
   renderList(); renderCartBadge();
 }
 init();
